--- a/src/application-javascript/package.json
+++ b/src/application-javascript/package.json
@@ -12,10 +12,11 @@
         "express": "^4.17.1",
         "fabric-ca-client": "^2.2.4",
         "fabric-network": "^2.2.4",
-        "morgan": "^1.10.0",
-        "portscanner": "^2.2.0"
+        "morgan": "^1.10.0"
     },
     "devDependencies": {
-        "nodemon": "^2.0.7"
+        "nodemon": "^2.0.7",
+        "swagger-jsdoc": "^6.0.0",
+        "swagger-ui-express": "^4.1.6"
     }
 }
